# desafio-etl

./: .gitignore  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/: __main__.py
